[metadata]
name = fp-vdev-remote 
summary = Provides a client to fp-rcpd daemon for sending fp-vdev requests from containers to host-hypervisor with fp-vdev util.
description-file =
    README.rst
author = 6WIND
author-email = support@6wind.com
home-page = https://github.com/6WIND/fp-vdev-remote
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    fp_vdev_remote

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    fp-vdev-remote = fp_vdev_remote.vdev_remote:main
